# tpy-lang.org

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  build_examples.py  pyproject.toml  verify_examples.py
.github/workflows/: pages.yml
docs/: CNAME  examples.js  index.html
docs-site/: SCOPE.md  mkdocs.yml  requirements.txt
docs-site/hooks/: version.py
docs-site/overrides/: main.html
docs-site/src/: compatibility.md  getting-started.md  guide.md  index.md
docs/docs/: 404.html  index.html  sitemap.xml
examples/: async_demo.py  classes.py  mandelbrot.py  ownership.py  pattern_matching.py  requests_demo.py  standard_types.py  stdlib_demo.py
tests/: README.md  conftest.py  docsnippets.py  test_compat_probes.py  test_docs_snippets.py
tests/compat/: arc_thread_safe.py  assert_catchable.py  asyncio_create_task.py  builtins_typing_current.py  bytes_literal.py  calls_defaults_keywords.py  closures_first_class.py  context_manager.py  dataclass.py  del_deterministic.py  everyday_constructs.py  except_tuple_rejected.py  except_tuple_supported.py  exceptions_hierarchy_reraise.py  ext_module_export.py  float_varargs_augassign.py  fstring_list_rejected.py  generics_pep695.py  global_reassign_rejected.py  hash_object_in_set.py  inheritance_super_static.py  iterator_stopiteration.py  kwargs_untyped_rejected.py  multiple_inheritance.py  noalloc_accepted_unenforced.py  operator_overload.py  pip_import_rejected.py  protocol_container_rejected.py  protocols_structural.py  rc_shared_ownership.py  sort_with_lambda_key.py  sorted_needs_comparable.py  toplevel_code.py  (+7 more)
(+28 files in other folders)
